<resources>

    <string name="app_name">EasyNavigator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="enter_source">Enter Source</string>
    <string name="delhi">Delhi</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="search">Search</string>
    <string name="title_activity_easy_navigator">EasyNavigator</string>

</resources>